<resources>
    <string name="app_name">LM_RHN_Prakti2</string>

    <string name="title_activity_menu">MenuActivity</string>
    <string name="btn_periodic">Periodisches Reporting</string>
    <string name="btn_distance">Distanz-basiertes Reporting</string>
    <string name="btn_energy_efficient">Energie-effiziente Strategie</string>
    <string name="btn_still">Stillstand gewahre Strategie</string>
    <string name="btn_settings">Einstellungen</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>